# ndigo6g_babel

./: .gitignore  README.md
.github/workflows/: build_all.yml
include/: ndigo6g12_interface.h  readme.md
lib/: ndigo6g12_driver_64.lib  readme.md
libs/: ndigo6g12_driver_64.lib  readme.md
src/: ndigo6g12_averager_example.cpp  ndigo6g12_example.cpp  readme.md
tools/: CMakeLists.txt  readme.md
ug_example/: delay.h  ndigo6g12_app.h  ndigo6g12_averager_example.cpp  ndigo6g12_example.cpp  readme.md
ug_example/src/: ndigo6g12_adc_averager.cpp  ndigo6g12_example.cpp
ug_example/tools/: CMakeLists.txt
